refactor and readme

--- a/pom.xml
+++ b/pom.xml
@@ -11,9 +11,9 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
-    <spring-cloud.version>Finchley.RC1</spring-cloud.version>
-    <spring.cloud.k8s.version>0.3.0.BUILD-SNAPSHOT</spring.cloud.k8s.version>
-    <spring.boot.version>2.0.1.RELEASE</spring.boot.version>
+    <spring-cloud.version>Finchley.RC2</spring-cloud.version>
+    <spring.cloud.k8s.version>0.3.0.RC1</spring.cloud.k8s.version>
+    <spring.boot.version>2.0.2.RELEASE</spring.boot.version>
   </properties>
   <dependencyManagement>
 		<dependencies>
@@ -65,7 +65,6 @@
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-kubernetes-ribbon</artifactId>
     </dependency>
-
   </dependencies>
   <build>
     <plugins>
