--- a/charts/ttc-infra-gateway/values.yaml
+++ b/charts/ttc-infra-gateway/values.yaml
@@ -11,7 +11,7 @@ image:
   tag: dev
   pullPolicy: IfNotPresent
 service:
-  name: ttc-infra-gateway
+  name: ttc-campaigns-service
   type: ClusterIP
   externalPort: 80
   internalPort: 8080
