--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -3,7 +3,7 @@ kind: Config
 build:
   tagPolicy:
     envTemplate:
-      template: "{{.JENKINS_X_DOCKER_REGISTRY_SERVICE_HOST}}:{{.JENKINS_X_DOCKER_REGISTRY_SERVICE_PORT}}/salaboy/ttc-infra-gateway:{{.VERSION}}"
+      template: "{{.JENKINS_X_DOCKER_REGISTRY_SERVICE_HOST}}:{{.JENKINS_X_DOCKER_REGISTRY_SERVICE_PORT}}/Activiti/ttc-campaigns-service:{{.VERSION}}"
   artifacts:
   - imageName: changeme
     workspace: .
@@ -17,15 +17,15 @@ profiles:
   build:
     tagPolicy:
       envTemplate:
-        template: "{{.JENKINS_X_DOCKER_REGISTRY_SERVICE_HOST}}:{{.JENKINS_X_DOCKER_REGISTRY_SERVICE_PORT}}/salaboy/ttc-infra-gateway:{{.DIGEST_HEX}}"
+        template: "{{.JENKINS_X_DOCKER_REGISTRY_SERVICE_HOST}}:{{.JENKINS_X_DOCKER_REGISTRY_SERVICE_PORT}}/Activiti/ttc-campaigns-service:{{.DIGEST_HEX}}"
     artifacts:
     - docker: {}
     local: {}
   deploy:
     helm:
       releases:
-      - name: ttc-infra-gateway
-        chartPath: charts/ttc-infra-gateway
+      - name: ttc-campaigns-service
+        chartPath: charts/ttc-campaigns-service
         setValueTemplates:
-          image.repository: "{{.JENKINS_X_DOCKER_REGISTRY_SERVICE_HOST}}:{{.JENKINS_X_DOCKER_REGISTRY_SERVICE_PORT}}/salaboy/ttc-infra-gateway"
+          image.repository: "{{.JENKINS_X_DOCKER_REGISTRY_SERVICE_HOST}}:{{.JENKINS_X_DOCKER_REGISTRY_SERVICE_PORT}}/Activiti/ttc-campaigns-service"
           image.tag: "{{.TAG}}"
