--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <spring-cloud.version>Finchley.SR1</spring-cloud.version>
     <spring.cloud.k8s.version>0.3.0.RELEASE</spring.cloud.k8s.version>
     <spring.boot.version>2.0.4.RELEASE</spring.boot.version>
+    <activiti.cloud.version>7.0.0.Beta1</activiti.cloud.version>
   </properties>
   <dependencyManagement>
 		<dependencies>
@@ -48,6 +49,11 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.activiti.cloud</groupId>
+      <artifactId>activiti-cloud-services-common-security-keycloak</artifactId>
+      <version>${activiti.cloud.version}</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
