--- a/charts/ttc-campaigns-service/values.yaml
+++ b/charts/ttc-campaigns-service/values.yaml
@@ -11,7 +11,7 @@ image:
   tag: dev
   pullPolicy: IfNotPresent
 service:
-  name: campaigns
+  name: ttc-campaigns-service
   type: ClusterIP
   externalPort: 80
   internalPort: 8080
