--- a/charts/ttc-campaigns-service/templates/deployment.yaml
+++ b/charts/ttc-campaigns-service/templates/deployment.yaml
@@ -23,6 +23,8 @@ spec:
         env:
         - name: JAVA_OPTS
           value: -Xmx{{ .Values.javaOpts.xmx }} -Xms{{ .Values.javaOpts.xms }} {{ .Values.javaOpts.other}}
+        - name: ACT_KEYCLOAK_URL
+          value: "{{ .Values.global.keycloak.url }}"
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         ports:
         - containerPort: {{ .Values.service.internalPort }}
