--- a/charts/ttc-campaigns-service/values.yaml
+++ b/charts/ttc-campaigns-service/values.yaml
@@ -2,6 +2,9 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 replicaCount: 1
+global:
+  keycloak:
+    url: ""
 javaOpts:
   xmx: 768m
   xms: 512m
