campaigns service as standalone to be discovered by gateway (#2)
campaigns service at {GATEWAY_URL}/ttc-campaigns/v1/campaigns

--- a/charts/ttc-campaigns-service/templates/deployment.yaml
+++ b/charts/ttc-campaigns-service/templates/deployment.yaml
@@ -11,7 +11,7 @@ spec:
     metadata:
       labels:
         draft: {{ default "draft-app" .Values.draft }}
-        app: {{ .Values.service.name }}
+        app: {{ template "fullname" . }}
 {{- if .Values.podAnnotations }}
       annotations:
 {{ toYaml .Values.podAnnotations | indent 8 }}
@@ -23,6 +23,8 @@ spec:
         env:
         - name: JAVA_OPTS
           value: -Xmx{{ .Values.javaOpts.xmx }} -Xms{{ .Values.javaOpts.xms }} {{ .Values.javaOpts.other}}
+        - name: ACT_KEYCLOAK_URL
+          value: "{{ .Values.global.keycloak.url }}"
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         ports:
         - containerPort: {{ .Values.service.internalPort }}
