--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.activiti.cloud.examples</groupId>
-  <artifactId>infra-gateway</artifactId>
+  <artifactId>campaigns-service</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <name>Activiti Cloud :: Infrastructure Gateway</name>
+  <name>Activiti Cloud :: Campaigns Service</name>
   <properties>
     <java.version>1.8</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -14,6 +14,7 @@
     <spring-cloud.version>Finchley.SR1</spring-cloud.version>
     <spring.cloud.k8s.version>0.3.0.RELEASE</spring.cloud.k8s.version>
     <spring.boot.version>2.0.4.RELEASE</spring.boot.version>
+    <activiti.cloud.version>7.0.0.Beta1</activiti.cloud.version>
   </properties>
   <dependencyManagement>
 		<dependencies>
@@ -47,15 +48,20 @@
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.activiti.cloud</groupId>
+      <artifactId>activiti-cloud-services-common-security-keycloak</artifactId>
+      <version>${activiti.cloud.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-autoconfigure</artifactId>
     </dependency>
     <dependency>
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.cloud</groupId>
-      <artifactId>spring-cloud-starter-gateway</artifactId>
     </dependency>
     <dependency>
       <groupId>org.springframework.cloud</groupId>
