--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <spring-cloud.version>Finchley.SR1</spring-cloud.version>
     <spring-cloud-k8s.version>0.3.0.RELEASE</spring-cloud-k8s.version>
     <spring-boot.version>2.0.4.RELEASE</spring-boot.version>
-    <activiti.cloud.version>7.0.29</activiti.cloud.version>
+    <activiti-cloud-dependencies.version>7.0.60</activiti-cloud-dependencies.version>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -42,7 +42,7 @@
       <dependency>
         <groupId>org.activiti.cloud.dependencies</groupId>
         <artifactId>activiti-cloud-dependencies</artifactId>
-        <version>${activiti.cloud.version}</version>
+        <version>${activiti-cloud-dependencies.version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
