--- a/pom.xml
+++ b/pom.xml
@@ -111,5 +111,11 @@
       </plugin>
     </plugins>
   </build>
-
+  <repositories>
+    <repository>
+      <id>activiti-releases</id>
+      <name>Activiti Releases</name>
+      <url>https://artifacts.alfresco.com/nexus/content/repositories/activiti-releases/</url>
+    </repository>
+  </repositories>
 </project>
