--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -3,7 +3,7 @@ kind: Config
 build:
   tagPolicy:
     envTemplate:
-      template: "{{.JENKINS_X_DOCKER_REGISTRY_SERVICE_HOST}}:{{.JENKINS_X_DOCKER_REGISTRY_SERVICE_PORT}}/activiti/ttc-campaigns-service:{{.VERSION}}"
+      template: "{{.DOCKER_REGISTRY}}/activiti/ttc-campaigns-service:{{.VERSION}}"
   artifacts:
   - imageName: changeme
     workspace: .
@@ -17,7 +17,7 @@ profiles:
   build:
     tagPolicy:
       envTemplate:
-        template: "{{.JENKINS_X_DOCKER_REGISTRY_SERVICE_HOST}}:{{.JENKINS_X_DOCKER_REGISTRY_SERVICE_PORT}}/activiti/ttc-campaigns-service:{{.DIGEST_HEX}}"
+        template: "{{.DOCKER_REGISTRY}}/activiti/ttc-campaigns-service:{{.DIGEST_HEX}}"
     artifacts:
     - docker: {}
     local: {}
@@ -27,5 +27,5 @@ profiles:
       - name: ttc-campaigns-service
         chartPath: charts/ttc-campaigns-service
         setValueTemplates:
-          image.repository: "{{.JENKINS_X_DOCKER_REGISTRY_SERVICE_HOST}}:{{.JENKINS_X_DOCKER_REGISTRY_SERVICE_PORT}}/activiti/ttc-campaigns-service"
+          image.repository: "{{.DOCKER_REGISTRY}}/activiti/ttc-campaigns-service"
           image.tag: "{{.TAG}}"
