--- a/pom.xml
+++ b/pom.xml
@@ -2,29 +2,37 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>2.1.0.RELEASE</version>
+    <relativePath/> <!-- lookup parent from repository -->
+  </parent>
   <groupId>org.activiti.cloud.examples</groupId>
   <artifactId>campaigns-service</artifactId>
   <version>1.0-SNAPSHOT</version>
   <name>Activiti Cloud :: Campaigns Service</name>
   <properties>
-    <java.version>1.8</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
+
+    <java.version>11</java.version>
+    <activiti-cloud-dependencies.version>7.0.160</activiti-cloud-dependencies.version>	    
+    <maven.compiler.source>${java.version}</maven.compiler.source>
+    <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>	    
+    <maven.compiler.target>${java.version}</maven.compiler.target>
+    <maven-failsafe-plugin.version>2.18.1</maven-failsafe-plugin.version>	    
+    <activiti-cloud-dependencies.version>7.0.160</activiti-cloud-dependencies.version>
+    <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version> <!-- required for jx -->	    
+    <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
+    <maven-failsafe-plugin.version>3.0.0-M3</maven-failsafe-plugin.version>
+    <maven-surefire-plugin.version>3.0.0-M3</maven-surefire-plugin.version>
+    <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version> <!-- required for jx -->
     <spring-cloud.version>Finchley.SR1</spring-cloud.version>
     <spring-cloud-k8s.version>0.3.0.RELEASE</spring-cloud-k8s.version>
-    <activiti-cloud-dependencies.version>7.0.157</activiti-cloud-dependencies.version>
-    <spring-boot.version>2.1.0.RELEASE</spring-boot.version>
   </properties>
   <dependencyManagement>
     <dependencies>
-      <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-dependencies</artifactId>
-        <version>${spring-boot.version}</version>
-        <scope>import</scope>
-        <type>pom</type>
-      </dependency>
       <dependency>
         <groupId>org.springframework.cloud</groupId>
         <artifactId>spring-cloud-dependencies</artifactId>
@@ -85,8 +93,7 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>${maven-compiler-plugin.version}</version>
         <configuration>
-          <source>${java.version}</source>
-          <target>${java.version}</target>
+          <release>${java.version}</release>
           <showDeprecation>true</showDeprecation>
           <showWarnings>true</showWarnings>
           <optimize>true</optimize>
@@ -95,7 +102,6 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
-        <version>${spring-boot.version}</version>
         <executions>
           <execution>
             <goals>
@@ -107,13 +113,14 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-deploy-plugin</artifactId>
-        <version>2.8.2</version>
+        <version>${maven-deploy-plugin.version}</version>
       </plugin>
     
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.0.0-M1</version></plugin>
+        <version>${maven-surefire-plugin.version}</version>
+      </plugin>
     </plugins>
   </build>
   <repositories>
