--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.1.0.RELEASE</version>
+    <version>2.1.2.RELEASE</version>
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
   <groupId>org.activiti.cloud.examples</groupId>
@@ -28,8 +28,8 @@
     <maven-failsafe-plugin.version>3.0.0-M3</maven-failsafe-plugin.version>
     <maven-surefire-plugin.version>3.0.0-M3</maven-surefire-plugin.version>
     <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version> <!-- required for jx -->
-    <spring-cloud.version>Finchley.SR1</spring-cloud.version>
-    <spring-cloud-k8s.version>0.3.0.RELEASE</spring-cloud-k8s.version>
+    <spring-cloud.version>Greenwich.RELEASE</spring-cloud.version>
+    <spring-cloud-k8s.version>1.0.0.RELEASE</spring-cloud-k8s.version>
   </properties>
   <dependencyManagement>
     <dependencies>
