--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=campaigns
 server.port=8080
 
 keycloak.auth-server-url=${ACT_KEYCLOAK_URL:http://activiti-keycloak:8180/auth}
-keycloak.realm=${ACT_KEYCLOAK_REALM:activiti}
-keycloak.resource=${ACT_KEYCLOAK_RESOURCE:activiti}
+keycloak.realm=${ACT_KEYCLOAK_REALM:alfresco}
+keycloak.resource=${ACT_KEYCLOAK_RESOURCE:alfresco}
 keycloak.public-client=${ACT_KEYCLOAK_CLIENT:true}
 
 keycloak.ssl-required=${ACT_KEYCLOAK_SSL_REQUIRED:none}
